--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -1,65 +1,36 @@
-name: Generate M3U Playlists
+steps:
+  - name: Checkout repository
+    uses: actions/checkout@v4
+    with:
+      fetch-depth: 0
 
-on:
-  schedule:
-    # Runs every day at 3:00 AM UTC
-    - cron: '0 3 * * *'
-  workflow_dispatch: # Allows manual triggering from the Actions tab
-  push:
-    branches:
-      - main # Optional: Run when the script itself is updated on the main branch
-    paths:
-      - '*.py'
-      - '.github/workflows/generate.yml'
+  - name: Set up Python
+    uses: actions/setup-python@v5
+    with:
+      python-version: '3.10'
 
-jobs:
-  build-playlists:
-    runs-on: ubuntu-latest
-    permissions:
-      contents: write # Allow the job to push changes back to the repo
+  - name: Install dependencies
+    run: |
+      python -m pip install --upgrade pip
+      pip install requests
 
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
+  - name: Run playlist generation script
+    # If you have a single entrypoint script, replace *.py with that filename for clarity
+    run: python *.py
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.10' # Or your preferred Python version
-
-      - name: Install Dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install requests
-
-      - name: Run Playlist Generation Script
-        run: python stirr.py
-
-      - name: Commit and Push Changes
-        run: |
-          git config --global user.name 'github-actions[bot]'
-          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-          # Check if there are any changes in the playlists directory
-          if git diff --quiet --exit-code HEAD origin/main; then
-            echo "No changes detected in playlists."
-            exit 0 # Exit successfully, no commit needed
-          fi
-          echo "Changes detected, committing updates..."
-          git add --force stirr.m3u # Stage only changes in the playlists
-          git commit -m "Update M3U playlists [skip ci]" # [skip ci] prevents triggering another run if 'push' is enabled
-          # Retry push with delay in case of transient errors or race conditions
-          n=0
-          until [ $n -ge 5 ]
-          do
-             git push && break # Try to push, exit loop if successful
-             n=$((n+1))
-             echo "Push failed. Retrying attempt $n/5..."
-             sleep 15 # Wait before retrying
-          done
-          if [ $n -ge 5 ]; then
-             echo "Failed to push changes after multiple attempts."
-             exit 1 # Exit with error if push fails after retries
-          fi
-        env:
-          # The GITHUB_TOKEN is automatically provided by GitHub Actions
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  - name: Commit and push generated playlists
+    shell: bash
+    env:
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    run: |
+      git config user.name "github-actions[bot]"
+      git config user.email "github-actions[bot]@users.noreply.github.com"
+      # Stage playlist files (force in case they are in .gitignore); tolerate no-match
+      git add --force *.m3u || true
+      # If there are staged changes, commit and push; otherwise skip
+      if git diff --cached --quiet; then
+        echo "No playlist changes to commit."
+      else
+        git commit -m "Update M3U playlists [skip ci]"
+        git push origin HEAD:main
+      fi
