--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -1,3 +1,23 @@
+name: Generate M3U Playlists
+
+on:
+  schedule:
+    # Runs every day at 3:00 AM UTC
+    - cron: '0 3 * * *'
+  workflow_dispatch: # Allows manual triggering from the Actions tab
+  push:
+    branches:
+      - main # Optional: Run when the script itself is updated on the main branch
+    paths:
+      - '*.py'
+      - '.github/workflows/generate.yml'
+
+jobs:
+  build-playlists:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write # Allow the job to push changes back to the repo
+      
 steps:
   - name: Checkout repository
     uses: actions/checkout@v4
@@ -7,7 +27,7 @@ steps:
   - name: Set up Python
     uses: actions/setup-python@v5
     with:
-      python-version: '3.10'
+      python-version: '3.10' # Allow the job to push changes back to the repo
 
   - name: Install dependencies
     run: |
