--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -18,39 +18,37 @@ jobs:
     permissions:
       contents: write # Allow the job to push changes back to the repo
       
-  steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
-      with:
-      fetch-depth: 0
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v4
 
-    - name: Set up Python
-      uses: actions/setup-python@v5
-      with:
-        python-version: '3.10' # Allow the job to push changes back to the repo
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.10' # Or your preferred Python version
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install requests
+      - name: Install Dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install requests
 
-    - name: Run playlist generation script
-      # If you have a single entrypoint script, replace *.py with that filename for clarity
-      run: python *.py
+      - name: Run Playlist Generation Script
+        # If you have a single entrypoint script, replace *.py with that filename for clarity
+        run: python *.py
 
-    - name: Commit and push generated playlists
-      shell: bash
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      run: |
-        git config user.name "github-actions[bot]"
-        git config user.email "github-actions[bot]@users.noreply.github.com"
-        # Stage playlist files (force in case they are in .gitignore); tolerate no-match
-        git add --force *.m3u || true
-        # If there are staged changes, commit and push; otherwise skip
-        if git diff --cached --quiet; then
-          echo "No playlist changes to commit."
-        else
-          git commit -m "Update M3U playlists [skip ci]"
-          git push origin HEAD:main
-        fi
+      - name: Commit and push generated playlists
+        shell: bash
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          # Stage playlist files (force in case they are in .gitignore); tolerate no-match
+          git add --force *.m3u || true
+          # If there are staged changes, commit and push; otherwise skip
+          if git diff --cached --quiet; then
+            echo "No playlist changes to commit."
+          else
+            git commit -m "Update M3U playlists [skip ci]"
+            git push origin HEAD:main
+          fi
