--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -35,9 +35,8 @@ jobs:
       - name: Run Playlist Generation Script
         # If you have a single entrypoint script, replace *.py with that filename for clarity
         run: |
-          for file in *.py; do
-            python "$file"
-          done
+          python rewardedtv.py
+          python stirr.py
       - name: Commit and push generated playlists
         shell: bash
         env:
